@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.111 2005/03/27 04:39:56 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.112 2005/03/27 06:27:19 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
@@ -8,6 +8,7 @@
   Changed the print statements to logging in the partitioning BE code.
   the logger may need to be imported to the x86archtemplate. unknown yet.
   Added the finishing_cleanup function.
+  added a fix to the logger from BenUrban
   
   25 Mar 2005; Preston Cody <codeman@gentoo.org>
   changed InstallProfile to remove is_uri check on kernel, stage, and portage
